--- a/style.css
+++ b/style.css
@@ -127,6 +127,13 @@ body {
   font-weight: 500;
   transition: opacity 0.3s, transform 0.3s;
 }
+.attribution {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 0.5rem;
+}
 
 @media screen and (min-width: 1024px) {
   body {
@@ -190,6 +197,10 @@ body {
 
   #job {
     padding-left: 0.5rem;
+  }
+
+  .attribution {    
+    font-size: 0.7rem;
   }
 }
 
